--- a/rStravaProject_Presentation.html
+++ b/rStravaProject_Presentation.html
@@ -141,7 +141,7 @@ Multiple linear regression
 ![](pred_actual.png)
 ]
 .pull-right[
-![](resid_pred.png)
+![](resid_fit.png)
 ]
 ---
 # Concluding Remarks
