--- a/rStravaProject_Presentation.html
+++ b/rStravaProject_Presentation.html
@@ -151,7 +151,7 @@ Multiple linear regression
 2. Limitations
  - Method of variable selection
  - Interaction between variables
- - hetertoscedastic data
+ - heteroscedastic data
  - possible non-linear relationships
 
 ???
